--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
 
     <!-- npm install @fortawesome/fontawesome-free -->
     <link href="../node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
  
     <!-- npm install swiper -->
     <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.min.css" />
@@ -22,17 +27,19 @@
     <!-- Custom Css -->
     <style>
       * {
-                padding: 0;
-                margin: 0;
-                box-sizing: border-box;
-                scroll-behavior: smooth;
-                text-decoration: none;
-                list-style: none;
-            }
+          padding: 0;
+          margin: 0;
+          box-sizing: border-box;
+          scroll-behavior: smooth;
+          text-decoration: none;
+          list-style: none;
+          font-family: 'Poppins', sans-serif;
+          font-family: 'Quicksand', sans-serif;
+      }
 
-            body::-webkit-scrollbar {
-                display: none;
-            }
+      body::-webkit-scrollbar {
+          display: none;
+      }
     </style>
 
   </head>
