--- a/src/index.html
+++ b/src/index.html
@@ -52,16 +52,17 @@
   <div id="top"></div>
 
   <!-- Start Navbar -->
-  <nav class="bg-slate-900 shadow-md px-3 md:px-1 lg:px-4 z-10 animate__animated" id="nav">
+  <nav class="bg-slate-900 dark:bg-slate-200 shadow-md px-3 md:px-1 lg:px-4 z-10 animate__animated duration-200"
+    id="nav">
     <div class="container flex flex-row justify-between items-center mx-auto">
 
       <div class="flex items-center">
         <img src="/logo.png" class="w-11 me-2"></img>
-        <h3 class="text-2xl font-bold text-slate-200">Berryblog</h3>
+        <h3 class="text-2xl font-bold text-slate-200 dark:text-emerald-600">Berryblog</h3>
       </div>
 
       <ul
-        class="flex flex-col md:flex-row space-x-0 md:space-x-6 space-y-6 md:space-y-0 text-lg text-slate-200 / bg-slate-900 fixed md:static top-0 -right-full md:right-0 w-full md:w-auto h-screen md:h-auto z-10 justify-center items-center duration-300 pe-48 md:pe-0"
+        class="flex flex-col md:flex-row space-x-0 md:space-x-6 space-y-6 md:space-y-0 text-lg text-slate-200 dark:text-slate-800 cursor-pointer / bg-slate-900 dark:bg-slate-200 fixed md:static top-0 -right-full md:right-0 w-full md:w-auto h-screen md:h-auto z-10 justify-center items-center duration-200 pe-48 md:pe-0"
         id="menuItem">
 
         <i class="absolute top-5 left-5 fa-solid fa-xmark flex md:hidden" onclick="closeMenu()"></i>
@@ -70,10 +71,10 @@
           <a href="#home">Home</a>
         </li>
         <li onclick="closeMenu()">
-          <a href="">Why?</a>
+          <a>Why?</a>
         </li onclick="closeMenu()">
         <li>
-          <a href="">Features</a>
+          <a>Features</a>
         </li>
         <li onclick="closeMenu()">
           <a href="#blog">Blog</a>
@@ -96,7 +97,7 @@
         </div>
 
         <!-- Menuicon -->
-        <i class="fa-solid fa-bars text-slate-200 text-2xl flex md:hidden" onclick="openMenu()"></i>
+        <i class="fa-solid fa-bars text-slate-200 dark:text-slate-800 text-2xl flex md:hidden" onclick="openMenu()"></i>
 
       </div>
 
@@ -105,7 +106,7 @@
   <!-- End Navbar -->
 
   <!--Start Slider Section -->
-  <section class="py-16 bg-slate-800 px-3 md:px-1 lg:px-4" id="home">
+  <section class="py-16 bg-slate-800 dark:bg-slate-100 px-3 md:px-1 lg:px-4 duration-200" id="home">
     <!-- Slider main container -->
     <div class="swiper container rounded-lg">
       <!-- Additional required wrapper -->
@@ -184,33 +185,33 @@
   <!--Start Slider Section -->
 
   <!--Start Member Section -->
-  <section class="py-10 bg-slate-800 px-3 md:px-1 lg:px-4" id="member">
+  <section class="py-10 bg-slate-800 dark:bg-slate-200 px-3 md:px-1 lg:px-4 duration-200" id="member">
     <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mx-auto">
       <div class="headline">
         <div class="text-center hover:border border-emerald-700 rounded-md p-6 w-48 md:w-52 duration-75 mx-auto">
           <h3 class="text-emerald-600 text-4xl font-semibold">500+ M</h3>
-          <span class="text-lg text-slate-200">Hacking Labs</span>
+          <span class="text-lg text-slate-200 dark:text-slate-800">Hacking Labs</span>
         </div>
       </div>
 
       <div class="headline">
         <div class="text-center hover:border border-emerald-700 rounded-md p-6 w-48 md:w-52 duration-75 mx-auto">
           <h3 class="text-emerald-600 text-4xl font-semibold">500+ M</h3>
-          <span class="text-lg text-slate-200">Hacking Labs</span>
+          <span class="text-lg text-slate-200 dark:text-slate-800">Hacking Labs</span>
         </div>
       </div>
 
       <div class="headline">
         <div class="text-center hover:border border-emerald-700 rounded-md p-6 w-48 md:w-52 duration-75 mx-auto">
           <h3 class="text-emerald-600 text-4xl font-semibold">500+ M</h3>
-          <span class="text-lg text-slate-200">Hacking Labs</span>
+          <span class="text-lg text-slate-200 dark:text-slate-800">Hacking Labs</span>
         </div>
       </div>
 
       <div class="headline">
         <div class="text-center hover:border border-emerald-700 rounded-md p-6 w-48 md:w-52 duration-75 mx-auto">
           <h3 class="text-emerald-600 text-4xl font-semibold">500+ M</h3>
-          <span class="text-lg text-slate-200">Hacking Labs</span>
+          <span class="text-lg text-slate-200 dark:text-slate-800">Hacking Labs</span>
         </div>
       </div>
     </div>
@@ -218,21 +219,21 @@
   <!--Start Member Section -->
 
   <!--Start Blog Section -->
-  <section class="py-16 bg-slate-800 px-3 md:px-1 lg:px-4" id="blog">
+  <section class="py-16 bg-slate-800 dark:bg-slate-100 px-3 md:px-1 lg:px-4 duration-200" id="blog">
     <div class="container mx-auto">
       <div class="mb-5">
-        <h3 class="text-slate-200 text-2xl mb-2">How Hackers Digest</h3>
+        <h3 class="text-slate-200 dark:text-slate-800 text-2xl mb-2">How Hackers Digest</h3>
         <span class="text-slate-500 text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
           Perspiciatis maiores magnam incidunt.</span>
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-1.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -242,11 +243,11 @@
         <!-- End Card -->
 
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-2.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -256,11 +257,11 @@
         <!-- End Card -->
 
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-3.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -270,11 +271,11 @@
         <!-- End Card -->
 
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-4.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -284,11 +285,11 @@
         <!-- End Card -->
 
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-5.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -298,11 +299,11 @@
         <!-- End Card -->
 
         <!--Start Card -->
-        <div class="bg-slate-700 rounded-lg shadow-md hover:rotate-2 duration-300 headline">
+        <div class="bg-slate-700 dark:bg-slate-200 rounded-lg shadow-md hover:rotate-2 duration-200 headline">
           <img src="../assets/images/work-6.jpg" class="rounded-t-lg" />
 
           <div class="p-4 space-y-4">
-            <span class="text-slate-200">HACKING | 10-Jan-2023</span>
+            <span class="text-slate-200 dark:text-slate-800">HACKING | 10-Jan-2023</span>
             <h3 class="text-emerald-600 text-xl font-semibold">
               From Water to Wellness: Celebrating World Water Day and Its
               Vital Role in Maintaining Good Oral Health
@@ -316,7 +317,7 @@
   <!--Start Blog Section -->
 
   <!-- Start Footer Section -->
-  <section class="py-5 bg-slate-900 px-3 md:px-1 lg:px-4" id="footer">
+  <section class="py-5 bg-slate-900 dark:bg-slate-200 px-3 md:px-1 lg:px-4 duration-200" id="footer">
 
     <div class="container flex flex-col md:flex-row space-y-2 md:space-y-0 justify-between items-center mx-auto">
       <div class="flex items-center">
@@ -324,7 +325,7 @@
         <span class="text-emerald-600 text-xl font-semibold ms-1">Berryleaf</span>
       </div>
 
-      <ul class="flex space-x-5 text-slate-600 dark:text-slate-50 text-sm md:text-md cursor-pointer">
+      <ul class="flex space-x-5 text-slate-600 dark:text-slate-800 text-sm md:text-md cursor-pointer">
         <li class="hover:underline hover:underline-offset-8">Privacy and Policy</li>
         <li class="hover:underline hover:underline-offset-8">Contact</li>
         <li class="hover:underline hover:underline-offset-8">Terms</li>
@@ -382,7 +383,6 @@
   const darkSwitchIcon = document.querySelector("#dark-switch-icon");
   const darkSwitch = document.querySelector("#dark-switch");
   const darkText = document.querySelector("#dark-text");
-  const html = document.documentElement;
   let isDarkMode = false;
 
   // Switch theme function
@@ -392,6 +392,8 @@
   };
 
   const toDark = () => {
+    document.documentElement.classList.add('dark');
+
     darkSwitchIcon.classList.add(
       "translate-x-full",
       "rotate-[360deg]",
@@ -401,17 +403,17 @@
     darkSwitch.classList.remove("bg-slate-800");
     darkSwitch.classList.add("bg-slate-100");
     localStorage.setItem("data-theme", "dark");
-    html.classList.add("dark");
     darkText.classList.add("-translate-x-7");
     darkText.innerText = "ON";
   };
 
   const toLight = () => {
+    document.documentElement.classList.remove('dark');
+
     darkSwitchIcon.classList.remove("translate-x-full", "bg-slate-900");
     darkSwitch.classList.remove("bg-slate-100");
     darkSwitch.classList.add("bg-slate-800");
     localStorage.removeItem("data-theme");
-    html.classList.remove("dark");
     darkText.classList.remove("-translate-x-7");
     darkText.innerText = "FF";
     darkSwitchIcon.innerHTML = `<i class="fa-regular fa-sun"></i>`;
